apps/hellosaanvika/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellosaanvika-svc
spec:
  selector:
    app: hellosaanvika
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
